--- a/styles.css
+++ b/styles.css
@@ -50,7 +50,7 @@ header span:hover {
 .container {
   margin-top: 60px;
   overflow: auto;
-  position: fixed;
+  position: absolute;
   width: 9rem;
   height: 100%;
 
@@ -123,4 +123,8 @@ header span:hover {
 
 .MiBoton:active {
   background-color: rgb(62, 126, 19);
+}
+.Principal {
+  padding: 80px;
+  padding-left: 10rem;
 }
